[package]
name = "the_world"
version = "0.1.0"
publish = false
authors = ["Jordan Hall <Jordanhall123@googlemail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg",
    "heron/2d",
]

dev = [
    "bevy/dynamic",
    "heron/debug-2d",
    "colored",
    "bevy-inspector-egui"
]

[dependencies]
bevy = { version = "0.6", default-features = false }
bevy_kira_audio = { version = "0.8" }
bevy_asset_loader = { version = "0.9", features=["render"] }
rand = { version = "0.8" }
heron = { version = "2.0" }
colored = { version = "2.0", optional = true }
bevy-inspector-egui = { version = "0.8", optional = true }
ezinput = "0.2"
ezinput_macros = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.26", features=["x11"]}

[build-dependencies]
embed-resource = "1.7"
